--- a/www/css/global.css
+++ b/www/css/global.css
@@ -1,3 +1,5 @@
+/* @override http://cintient/css/global.css */
+
 /*
  * 
  *  Cintient, Continuous Integration made simple.
@@ -563,6 +565,11 @@ html
   border: 1px solid #fff;
 }
 
+article#project
+{
+  float: left;
+}
+
 article#project .avatar
 {
   float: left;
@@ -575,100 +582,51 @@ article#project .avatar
   border: 1px solid #fff;
 }
 
-article#project .details
-{
-  float: left;
-  width: 670px;
-}
-
-article#project .details #buildsList
+article#project #buildsList
 {
   margin-left: 3px;
-  margin-top: 11px;
+  margin-top: 0px;
   font-size: .8em;
-  width: 350px;
-  float: left;
-  clear: none;
-}
-
-article#project .details #buildsList #buildsListDropdown
-{
-  font-size: .9em;
-}
-
-article#project .details #buildsList .label
-{
-  font-size: .9em;
-}
-
-article#project .details #users
-{
-  width: 270px;
-  height: auto;
-  margin-left: 20px;
-  margin-top: 0;
+  width: 335px;
+  height: 40px;
   float: right;
   clear: none;
 }
 
-article#project .details #users .user
+article#project #buildsList #buildsListDropdown
 {
-  width: 90px;
-  height: auto;
-  float: left;
+  font-size: .9em;
 }
 
-article#project #users .user .avatar
+article#project #buildsList .label
 {
-  width: 25px;
-  height: 25px;
-  margin-left: 1px;
-  margin-bottom: 3px;
-  box-shadow: 1px 1px 3px #111;
-  -webkit-box-shadow: #111 1px 1px 3px;
-  -moz-box-shadow: #111 1px 1px 3px;
-  border: 1px solid #fff;
-  float: left;
-}
-
-article#project #users .user .username
-{
-  font-size: .6em;
-  float: left;
-  clear: left;
-}
-
-article#project #users .title
-{
-  font-size: .76em;
-  margin-bottom: 8px;
-  float: left;
-  clear: both;
-  width: 100%;
+  font-size: .9em;
 }
 
 article#project .title
 {
   font-size: 1.1em;
-  margin-bottom: 2px;
-  width: 100%;
+  margin-bottom: 3px;
+  width: 370px;
+  overflow: none;
+  float: left;
+  margin-top: 2px;
 }
 
-article#project .stats
+article#project .details
 {
   font-size: .76em;
-  margin-left: 3px;
-  float: left;
+  margin-left: 1px;
 }
 
 article#project #statusContainer
 {
-  height: 90px;
+  height: 35px;
   float: left;
   /*width: 33px;*/
   width: 45px;
-  margin-top: 6px;
-  margin-left: 2px;
+  padding-top: 6px;
+  padding-left: 2px;
 }
 
 article#project #statusContainer .status
@@ -718,26 +676,81 @@ article#project #statusContainer .status
 
 .projectStatusOk
 {
+  float: left;
   margin-left: 7px;
   background: rgb(124,196,0); /* non-CSS3 */
   filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7CC400', endColorstr='#7A964B'); /* for IE */
   background: -webkit-gradient(linear, left top, left bottom, from(#7CC400), to(#7A964B)); /* for webkit browsers */
   background: -moz-linear-gradient(top, #7CC400, #7A964B); /* for firefox 3.6+ */
-  box-shadow: 0px 0px 4px rgb(124,196,0);
-  -webkit-box-shadow: rgb(124,196,0) 0px 0px 4px;
-  -moz-box-shadow: rgb(124,196,0) 0px 0px 4px;
+  box-shadow: 0px 0px 6px rgb(124,196,0);
+  -webkit-box-shadow: rgb(124,196,0) 0px 0px 6px;
+  -moz-box-shadow: rgb(124,196,0) 0px 0px 6px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  color: #aaefad;
 }
 
 .projectStatusFailed
 {
+  float: left;
   margin-left: 7px;
   background: rgb(255,40,0); /* non-CSS3 */
   filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF2800', endColorstr='#B35D4D'); /* for IE */
   background: -webkit-gradient(linear, left top, left bottom, from(#FF2800), to(#B35D4D)); /* for webkit browsers */
   background: -moz-linear-gradient(top, #FF2800, #B35D4D); /* for firefox 3.6+ */
-  box-shadow: 0px 0px 4px rrgb(255,40,0);
-  -webkit-box-shadow: rgb(255,40,0) 0px 0px 4px;
-  -moz-box-shadow: rgb(255,40,0) 0px 0px 4px;
+  box-shadow: 0px 0px 6px rgb(255,40,0);
+  -webkit-box-shadow: rgb(255,40,0) 0px 0px 6px;
+  -moz-box-shadow: rgb(255,40,0) 0px 0px 6px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+}
+
+.projectStatusWorking
+{
+  float: left;
+  margin-left: 7px;
+  background: rgb(240,240,240); /* non-CSS3 */
+  /*filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='silver'); */
+  /*background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(silver)); */
+  /*background: -moz-linear-gradient(top, #f3f3f3, silver); */
+  box-shadow: 0px 0px 4px rrgb(255,255,255);
+  -webkit-box-shadow: rgb(255,255,255) 0px 0px 4px;
+  -moz-box-shadow: rgb(255,255,255) 0px 0px 4px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  color: #f3f3f3;
+}
+
+.projectStatusUninitialized
+{
+  float: left;
+  margin-left: 7px;
+  background: #fdfa85;
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcea5d', endColorstr='#fdfa85'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#fcea5d), to(#fdfa85)); /* for webkit browsers */
+  background: -moz-linear-gradient(top, #fcea5d, #fdfa85); /* for firefox 3.6+ */
+  box-shadow: 0px 1px 7px rgb(254,253,0);
+  -webkit-box-shadow: rgb(254,253,0) 0px 1px 7px;
+  -moz-box-shadow: rgb(254,253,0) 0px 1px 7px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+}
+
+.projectStatusWaiting
+{
+  display: none;
+  background-image: url('/imgs/projectStatusWaiting.gif');
+  width: 24px;
+  height: 24px;
+  margin-left:3px;
+  margin-top:3px;
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
 }
 
 #projectListContainer
@@ -865,16 +878,11 @@ article#project #statusContainer .status
 
 #newProjectContainer
 {
-  width: 400px;
+  width: 600px;
   margin-bottom: 80px;
 }
 
 article#project .avatar
-{
-  font-size: .8em;
-}
-
-article#project .user .username
 {
   font-size: .8em;
 }
