Installation stats info text on the footer now properly pluralized/singularized for corresponding counts. It's now possible to invoke the footer with just the disclaimer and no installation stats info. A few layout tweaks.

--- a/www/css/installer.css
+++ b/www/css/installer.css
@@ -69,6 +69,7 @@
 {
   float: right;
   margin-right: 10px;
+  margin-top: 20px;
 }
 
 #installer button, #installer #save
@@ -113,7 +114,6 @@
 .installer_step ul.item
 {
   clear: both;
-  padding-top:20px;
 }
 
 .label
