--- a/www/css/global.css
+++ b/www/css/global.css
@@ -346,7 +346,8 @@ html
 {
   /*letter-spacing: .10em;
   font-family: Orbitron;*/
-  font-size: 1.1em;
+  /*font-size: 1.1em;*/
+  font-size: 14pt;
 }
 
 .labelCheckbox
@@ -360,6 +361,12 @@ html
 #submitButton, .submitButton
 {
   float: right;
+}
+
+.optionLink
+{
+  float: right;
+  margin-right: 10px;
 }
 
 /* @end */
@@ -562,6 +569,15 @@ html
 
 /* @end */
 
+
+/* @group Registration */
+
+.registrationContainer
+{
+  width: 500px;
+}
+
+/* @end */
 
 /* @group Projects */
 /* +----------------------------------------------------------------+ *\
