--- a/www/css/global.css
+++ b/www/css/global.css
@@ -199,6 +199,35 @@ html
   overflow-y: scroll;
 }
 
+.popupWidget
+{
+  font-size: 12pt;
+  display: none;
+  border: 1px solid #999;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  -moz-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: 2px 2px 10px #111;
+  -webkit-box-shadow: #111 2px 2px 10px;
+  -moz-box-shadow: #111 2px 2px 10px;
+  float: left;
+  padding: 6px;
+  padding-bottom:4px;
+  background: #999;
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#555555');
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #999), color-stop(0.6, #666), color-stop(0.9, #444));
+  background: -moz-linear-gradient(top, #999 16%, #666 60%, #555 90%);
+  color: #fff;
+  text-shadow: #303030 1px 1px 1px;
+  position: absolute;
+}
+
+.popupWidget li
+{
+  margin: 0;
+  padding: 2px 10px 2px 2px;
+}
+
 /* @end */
 
 /* @group Forms */
@@ -232,6 +261,7 @@ html
 .fineprintLabel
 {
   font-size: .7em;
+  text-indent: 2px;
 }
 
 #loginContainer
@@ -493,6 +523,22 @@ html
 |* | PROJECT EDIT                                                   | *|
 \* +----------------------------------------------------------------+ */
 
+#addUserPane #searchUserPane
+{
+  display: none;
+  margin-left: 10px;
+}
+
+#addUserPane .textfieldContainer
+{
+  margin-bottom: 2px;
+}
+.projectEditContainer #userList > li
+{
+  clear: both;
+  padding-top: 10px;
+}
+
 .projectEditContainer .accessLevelPane
 {
   width: 100px;
@@ -565,6 +611,27 @@ html
   float: left;
   margin-top: 12px;
   margin-left: 10px;
+}
+
+#addUserPane
+{
+  padding-bottom: 30px;
+}
+
+.avatar25
+{
+  width: 25px;
+  height: 25px;
+  box-shadow: 1px 1px 3px #111;
+  -webkit-box-shadow: #111 1px 1px 3px;
+  -moz-box-shadow: #111 1px 1px 3px;
+  border: 1px solid #fff;
+}
+
+#usersPane #addUserPane #searchUserPane .username
+{
+  padding-left: 6px;
+  vertical-align: 5px;
 }
 
 /* @end */
