Owners cannot remove themselves from project user's list - for the time being. Owners cannot change their own access level for a given project. Implemented access level support for users accessing a given project. Implemented ROOT class of service level access throughout. Fixed layout on the users list of a project.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -539,6 +539,12 @@ html
   padding-top: 10px;
 }
 
+.projectEditContainer #userList > li .user .remove
+{
+  float: left;
+  margin-top: 12px;
+}
+
 .projectEditContainer .accessLevelPane
 {
   width: 100px;
@@ -615,7 +621,7 @@ html
 
 #addUserPane
 {
-  padding-bottom: 30px;
+  padding-bottom: 15px;
 }
 
 .avatar25
