--- a/www/css/global.css
+++ b/www/css/global.css
@@ -567,10 +567,40 @@ html
 
 .projectEditContainer .accessLevelPane
 {
-  width: 100px;
+  margin-right: 15px;
   float: right;
   margin-top: 12px;
   margin-left: 20px;
+}
+
+.projectEditContainer .accessLevelPaneLevels li:first-child
+{
+
+}
+
+.projectEditContainer .accessLevelPaneLevels li
+{
+
+}
+
+.projectEditContainer .accessLevelPaneLevels li input
+{
+  margin-right: 7px;
+  margin-top: 2px;
+}
+
+.projectEditContainer .accessLevelPaneLevels .labelCheckbox
+{
+
+  font-size: .9em;
+}
+
+.projectEditContainer .accessLevelPaneLevels .fineprintLabel
+{
+  clear: left;
+  font-size: .56em;
+  margin-left: 23px;
+  text-indent: 0;
 }
 
 .projectEditContainer .accessLevelPaneLevels
@@ -584,8 +614,8 @@ html
   -webkit-box-shadow: #111 2px 2px 10px;
   -moz-box-shadow: #111 2px 2px 10px;
   float: left;
-  width: 90px;
-  padding: 6px;
+  width: 85px;
+  padding-left: 6px;
   padding-bottom:4px;
   background: #999;
   filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#555555');
@@ -594,6 +624,11 @@ html
   color: #fff;
   text-shadow: #303030 1px 1px 1px;
   position: absolute;
+}
+
+.projectEditContainer .accessLevelPaneLevels li
+{
+  margin-bottom: 6px;
 }
 
 .exclusivePane
@@ -616,7 +651,7 @@ html
   border: 1px solid #fff;
 }
 
-.projectEditContainer input[type=checkbox]
+.projectEditContainer input[type=checkbox], .projectEditContainer input[type=radio]
 {
   clear: left;
   float: left;
