Only owners can now edit a project's user list. Access level options now changed to exclusive radio buttons. Each radio button assumes it contains all of the previous radio button options. Several minor improvements. Access class now assumes each access level contains all of the previous levels before it.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -262,6 +262,7 @@ html
 {
   font-size: .7em;
   text-indent: 2px;
+  color: rgb(120,120,120);
 }
 
 #loginContainer
@@ -603,6 +604,15 @@ html
   text-indent: 0;
 }
 
+.projectEditContainer .accessLevelPaneLevels input[type=radio]
+{
+  clear: left;
+  float: left;
+  margin-top: 1px;
+  margin-right: 5px;
+  margin-bottom: 6px;
+}
+
 .projectEditContainer .accessLevelPaneLevels
 {
   display: none;
@@ -649,15 +659,6 @@ html
   -webkit-box-shadow: #111 1px 1px 3px;
   -moz-box-shadow: #111 1px 1px 3px;
   border: 1px solid #fff;
-}
-
-.projectEditContainer input[type=checkbox], .projectEditContainer input[type=radio]
-{
-  clear: left;
-  float: left;
-  margin-top: 4px;
-  margin-right: 5px;
-  margin-bottom: 6px;
 }
 
 .projectEditContainer .user .avatar
