Small filename change

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -903,7 +903,7 @@ article#project #statusContainer .status
 .projectStatusWaiting
 {
   display: none;
-  background-image: url('/imgs/loading-3.gif');
+  background-image: url('/imgs/loading.gif');
   background-repeat: no-repeat;
   background-position: center center;
   width: 24px;
