Builder element sorting on the project edit page is now fully functional. Removed toHtml() method on the BuilerElement and now using the proper toString().

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -701,12 +701,40 @@ html
 {
   width: auto;
   float: left;
+  margin-left: 10px;
+}
+
+.projectEditContainer .builderElementsAvailable h1
+{
+  text-decoration: underline;
+}
+
+.projectEditContainer .builderElementsAvailable li
+{
+  margin: 1px;
+  list-style-type: disc;
+}
+
+.projectEditContainer .builderElementsAvailable .builderElementDepth_0
+{
+  margin-left: 15px;
+}
+
+.projectEditContainer .builderElementsAvailable .builderElementDepth_1
+{
+  margin-left: 15px;
+}
+
+.projectEditContainer .builderElementsAvailable .builderElementDepth_2
+{
+  margin-left: 15px;
 }
 
 .projectEditContainer .builderElementsChosen
 {
   width: auto;
   float: left;
+  margin-left: 50px;
 }
 
 .projectEditContainer .builderElementsChosen .builderElement
