Mkdir task and Property type available on the Html connector to be edited. Minor layout tweaks on the project edit section.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -809,6 +809,11 @@ html
   clear: left;
 }
 
+.projectEditContainer .builderElementsChosen .builderElement .fineprintLabel
+{
+  color: white;
+}
+
 .projectEditContainer .builderElementsChosen .builderElement .checkboxContainer
 {
   font-size: 12pt;
