--- a/www/css/global.css
+++ b/www/css/global.css
@@ -1229,6 +1229,29 @@ article#project #statusContainer .status
   display: none;
 }
 
+#projectViewContainer #quality #jdependChart
+{
+  float: left;
+  margin-bottom: 10px;
+  border: 2px solid #999;
+  box-shadow: 2px 2px 10px #111;
+  -webkit-box-shadow: #111 2px 2px 10px;
+  -moz-box-shadow: #111 2px 2px 10px;
+  background-color: white;
+}
+
+#projectViewContainer #quality #overviewChart
+{
+  float: left;
+  margin-left: 8px;
+  margin-bottom: 10px;
+  border: 2px solid #999;
+  box-shadow: 2px 2px 10px #111;
+  -webkit-box-shadow: #111 2px 2px 10px;
+  -moz-box-shadow: #111 2px 2px 10px;
+  background-color: white;
+}
+
 #projectSectionsLinks
 {
   /*
