Fixed severe problems in unit tests chart generation.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -1224,6 +1224,11 @@ article#project #statusContainer .status
   -moz-box-shadow: #111 2px 2px 10px;
 }
 
+#projectViewContainer #junitReport .chart:not(:last-of-type)
+{
+  margin-bottom: 30px;
+}
+
 #projectViewContainer .buildResultPane
 {
   display: none;
