--- a/www/css/global.css
+++ b/www/css/global.css
@@ -41,6 +41,29 @@ a{text-decoration:none;}
 /* +----------------------------------------------------------------+ *\
 |* | GENERIC STUFF                                                  | *|
 \* +----------------------------------------------------------------+ */
+
+.dropdownTriangle {
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 3px solid rgb(255,40,0);
+  /*text-shadow: 0px 0px 6px rgba(255,40,0,1);*/
+}
+
+.highchart
+{
+  float: left;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  box-shadow: 2px 2px 10px #111;
+  -webkit-box-shadow: #111 2px 2px 10px;
+  -moz-box-shadow: #111 2px 2px 10px;
+  font-size: 8pt;
+  font-weight: normal;
+  text-decoration: none;
+  text-shadow: #fff 1px 1px 1px;
+  font-variant: normal;
+}
+
 a
 {
   color: rgb(255,40,0);
@@ -538,6 +561,181 @@ hr
 /* @end */
 
 
+/* @group Project details */
+/* +----------------------------------------------------------------+ *\
+|* | PROJECT DETAILS                                                | *|
+\* +----------------------------------------------------------------+ */
+
+.sparkline
+{
+  float: right;
+  margin-right: 100px;
+  margin-top: 3px;
+}
+
+#sparklineBuilds
+{
+  
+}
+
+.sparklineTitle
+{
+  font-variant: small-caps;
+  font-size: 9pt;
+}
+
+.projectAvatar40x40
+{
+  float: left;
+  width: 40px;
+  height: 40px;
+  margin-top: 1px;
+  box-shadow: 1px 1px 3px #111;
+  -webkit-box-shadow: #111 1px 1px 3px;
+  -moz-box-shadow: #111 1px 1px 3px;
+  border: 1px solid #fff;
+}
+
+#statusContainer
+{
+  height: 35px;
+  float: left;
+  /*width: 33px;*/
+  width: 45px;
+  padding-top: 6px;
+  padding-left: 2px;
+}
+
+#statusContainer .status
+{
+  width: 30px;
+  height: 30px;
+  -webkit-border-radius: 15px 15px 15px 15px;
+  -moz-border-radius: 15px 15px 15px 15px;
+  border-radius: 15px 15px 15px 15px;
+}
+
+.projectDetails
+{
+  float: left;
+}
+
+.projectTitle
+{
+  font-weight: bold;
+  margin-bottom: 2px;
+}
+
+.projectStats
+{
+  font-size: .6em;
+  width: auto;
+}
+
+.projectStatusContainer
+{
+  float: left;
+  width: 45px;
+  margin-top: 5px;
+  margin-left: 2px;
+}
+
+.projectStatus
+{
+  float: left;
+  margin-top: 2px;
+  width: 30px;
+  height: 30px;
+  -webkit-border-radius: 15px 15px 15px 15px;
+  -moz-border-radius: 15px 15px 15px 15px;
+  border-radius: 15px 15px 15px 15px;
+}
+
+.projectStatusOk
+{
+  float: left;
+  margin-left: 7px;
+  background: rgb(124,196,0); /* non-CSS3 */
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7CC400', endColorstr='#7A964B'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#7CC400), to(#7A964B)); /* for webkit browsers */
+  background: -moz-linear-gradient(top, #7CC400, #7A964B); /* for firefox 3.6+ */
+  box-shadow: 0px 0px 6px rgb(124,196,0);
+  -webkit-box-shadow: rgb(124,196,0) 0px 0px 6px;
+  -moz-box-shadow: rgb(124,196,0) 0px 0px 6px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  color: #aaefad;
+}
+
+.projectStatusFailed
+{
+  float: left;
+  margin-left: 7px;
+  background: rgb(255,40,0); /* non-CSS3 */
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF2800', endColorstr='#B35D4D'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF2800), to(#B35D4D)); /* for webkit browsers */
+  background: -moz-linear-gradient(top, #FF2800, #B35D4D); /* for firefox 3.6+ */
+  box-shadow: 0px 0px 6px rgb(255,40,0);
+  -webkit-box-shadow: rgb(255,40,0) 0px 0px 6px;
+  -moz-box-shadow: rgb(255,40,0) 0px 0px 6px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+}
+
+.projectStatusWorking
+{
+  float: left;
+  margin-left: 7px;
+  background: rgb(240,240,240); /* non-CSS3 */
+  /*filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='silver'); */
+  /*background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(silver)); */
+  /*background: -moz-linear-gradient(top, #f3f3f3, silver); */
+  box-shadow: 0px 0px 4px rrgb(255,255,255);
+  -webkit-box-shadow: rgb(255,255,255) 0px 0px 4px;
+  -moz-box-shadow: rgb(255,255,255) 0px 0px 4px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  color: #f3f3f3;
+}
+
+.projectStatusUninitialized
+{
+  float: left;
+  margin-left: 7px;
+  background: #fdfa85;
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcea5d', endColorstr='#fdfa85'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, from(#fcea5d), to(#fdfa85)); /* for webkit browsers */
+  background: -moz-linear-gradient(top, #fcea5d, #fdfa85); /* for firefox 3.6+ */
+  box-shadow: 0px 1px 7px rgb(254,253,0);
+  -webkit-box-shadow: rgb(254,253,0) 0px 1px 7px;
+  -moz-box-shadow: rgb(254,253,0) 0px 1px 7px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+}
+
+.projectStatusWaiting
+{
+  display: none;
+  background-image: url('/imgs/loading.gif');
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 24px;
+  height: 24px;
+  margin-left:3px;
+  margin-top:3px;
+  transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+}
+
+
+/* @end */
+
+
 /* @group Project edit */
 
 /* +----------------------------------------------------------------+ *\
@@ -765,6 +963,180 @@ hr
 /* @end */
 
 
+/* @group Project Header */
+/* +----------------------------------------------------------------+ *\
+|* | PROJECT HEADER                                                 | *|
+\* +----------------------------------------------------------------+ */
+
+#buildList
+{
+  font-size: 9pt;
+  margin: 42px 0 0 170px;
+  padding: 0;
+  float: left;
+  clear: none;
+  z-index: 99999;
+}
+
+#buildList table
+{
+  margin: 0;
+  padding: 0;
+}
+
+#buildListDropdownLink
+{
+  /* don't allow any interruption on hover between text and triangle */
+  float: left;
+}
+
+#buildList table th
+{
+  padding: 6px 0px 2px 5px;
+  font-weight: bold;
+}
+
+#buildList table td
+{
+  padding: 2px 4px 2px 8px;
+}
+
+#buildList table td:last-child
+{
+  padding-right: 8px;
+}
+
+#buildList dt
+{
+  padding: 1px 4px 1px 4px;
+  background-color: #000;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  border-radius: 4px 4px 4px 4px;
+  font-weight: normal;
+  text-decoration: none;
+  text-shadow: #444 1px 1px 1px;
+}
+
+#buildList dt.buildOk
+{
+  background: rgb(124,196,0); /* non-CSS3 */
+  color: #fff;
+}
+
+#buildList dt.buildFail
+{
+  background: rgb(255,40,0); /* non-CSS3 */
+  color: #fff;
+}
+
+#projectHeader .dropdownTriangle
+{
+  float: left;
+  margin: 6px 0 0 4px;
+  clear: right;
+}
+
+#projectHeader
+{
+  float: left;
+  margin-bottom: 30px;
+}
+
+#projectHeader .avatar
+{
+  float: left;
+  width: 90px;
+  height: 90px;
+  margin-top: 1px;
+  box-shadow: 1px 1px 3px #111;
+  -webkit-box-shadow: #111 1px 1px 3px;
+  -moz-box-shadow: #111 1px 1px 3px;
+  border: 1px solid #fff;
+}
+
+#projectHeader .title
+{
+  font-size: 1.1em;
+  margin-bottom: 3px;
+  width: 670px;
+  overflow: none;
+  float: left;
+  margin-top: 2px;
+}
+
+#projectHeader .details
+{
+  font-size: .76em;
+  margin-left: 1px;
+  float: left;
+  clear: none;
+}
+
+
+/* @end */
+
+
+/* @group Project page */
+/* +----------------------------------------------------------------+ *\
+|* | PROJECT PAGE                                                   | *|
+\* +----------------------------------------------------------------+ */
+
+#projectLog
+{
+  float: left;
+}
+
+.whiteBoard table
+{
+  display: none;
+  float: left;
+  font-size: 9pt;
+  border: 1px solid #fff;
+  box-shadow: 2px 2px 10px #111;
+  -webkit-box-shadow: #111 2px 2px 10px;
+  -moz-box-shadow: #111 2px 2px 10px;
+  background: #FBFBFB; /* non-CSS3 */
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd'); /* for IE */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #fff), color-stop(0.6, #ddd), color-stop(0.9, #bbb)); /* for webkit browsers */
+  background: -moz-linear-gradient(top, #fff 16%, #ddd 60%, #bbb 90%); /* for firefox 3.6+ */
+  color: #555;
+  font-weight: normal;
+  text-decoration: none;
+  text-shadow: #fff 1px 1px 1px;
+  font-variant: normal;
+  border-right: 1px solid #333;
+  border-left: 1px solid #bbb;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
+}
+
+.whiteBoard table th
+{
+  border-top: 1px dotted #999;
+  padding: 3px 0px 2px 4px;
+  font-weight: bold;
+  /*
+  background: #999;
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#555555');
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #999), color-stop(0.6, #666), color-stop(0.9, #555));
+  background: -moz-linear-gradient(top, #999 16%, #666 60%, #555 90%);
+  */
+}
+
+.whiteBoard table td
+{
+  padding: 1px 4px 2px 5px;
+}
+
+.whiteBoard table td:last-child
+{
+  padding-right: 6px;
+}
+
+/* @end */
+
+
 /* @group Registration */
 
 .registrationContainer
@@ -938,208 +1310,6 @@ hr
 |* | PROJECTS                                                       | *|
 \* +----------------------------------------------------------------+ */
 
-.projectAvatar40x40
-{
-  float: left;
-  width: 40px;
-  height: 40px;
-  margin-top: 1px;
-  box-shadow: 1px 1px 3px #111;
-  -webkit-box-shadow: #111 1px 1px 3px;
-  -moz-box-shadow: #111 1px 1px 3px;
-  border: 1px solid #fff;
-}
-
-article#project
-{
-  float: left;
-}
-
-article#project .avatar
-{
-  float: left;
-  width: 90px;
-  height: 90px;
-  margin-top: 1px;
-  box-shadow: 1px 1px 3px #111;
-  -webkit-box-shadow: #111 1px 1px 3px;
-  -moz-box-shadow: #111 1px 1px 3px;
-  border: 1px solid #fff;
-}
-
-#buildsList
-{
-  margin-left: 3px;
-  margin-top: 0px;
-  font-size: .8em;
-  width: 335px;
-  height: 40px;
-  float: left;
-  clear: none;
-}
-
-#buildsList #buildsListDropdown
-{
-  font-size: 10pt;
-}
-
-#buildsList .label
-{
-  font-size: 10pt;
-}
-
-article#project .title
-{
-  font-size: 1.1em;
-  margin-bottom: 3px;
-  width: 370px;
-  overflow: none;
-  float: left;
-  margin-top: 2px;
-}
-
-article#project .details
-{
-  font-size: .76em;
-  margin-left: 1px;
-}
-
-article#project #statusContainer
-{
-  height: 35px;
-  float: left;
-  /*width: 33px;*/
-  width: 45px;
-  padding-top: 6px;
-  padding-left: 2px;
-}
-
-article#project #statusContainer .status
-{
-  width: 30px;
-  height: 30px;
-  -webkit-border-radius: 15px 15px 15px 15px;
-  -moz-border-radius: 15px 15px 15px 15px;
-  border-radius: 15px 15px 15px 15px;
-}
-
-.projectDetails
-{
-  margin-left: 75px;
-}
-
-.projectTitle
-{
-  font-weight: bold;
-  margin-bottom: 2px;
-}
-
-.projectStats
-{
-  font-size: .6em;
-  width: auto;
-}
-
-.projectStatusContainer
-{
-  float: left;
-  width: 45px;
-  margin-top: 5px;
-  margin-left: 2px;
-}
-
-.projectStatus
-{
-  float: left;
-  margin-top: 2px;
-  width: 30px;
-  height: 30px;
-  -webkit-border-radius: 15px 15px 15px 15px;
-  -moz-border-radius: 15px 15px 15px 15px;
-  border-radius: 15px 15px 15px 15px;
-}
-
-.projectStatusOk
-{
-  float: left;
-  margin-left: 7px;
-  background: rgb(124,196,0); /* non-CSS3 */
-  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#7CC400', endColorstr='#7A964B'); /* for IE */
-  background: -webkit-gradient(linear, left top, left bottom, from(#7CC400), to(#7A964B)); /* for webkit browsers */
-  background: -moz-linear-gradient(top, #7CC400, #7A964B); /* for firefox 3.6+ */
-  box-shadow: 0px 0px 6px rgb(124,196,0);
-  -webkit-box-shadow: rgb(124,196,0) 0px 0px 6px;
-  -moz-box-shadow: rgb(124,196,0) 0px 0px 6px;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  color: #aaefad;
-}
-
-.projectStatusFailed
-{
-  float: left;
-  margin-left: 7px;
-  background: rgb(255,40,0); /* non-CSS3 */
-  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF2800', endColorstr='#B35D4D'); /* for IE */
-  background: -webkit-gradient(linear, left top, left bottom, from(#FF2800), to(#B35D4D)); /* for webkit browsers */
-  background: -moz-linear-gradient(top, #FF2800, #B35D4D); /* for firefox 3.6+ */
-  box-shadow: 0px 0px 6px rgb(255,40,0);
-  -webkit-box-shadow: rgb(255,40,0) 0px 0px 6px;
-  -moz-box-shadow: rgb(255,40,0) 0px 0px 6px;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-}
-
-.projectStatusWorking
-{
-  float: left;
-  margin-left: 7px;
-  background: rgb(240,240,240); /* non-CSS3 */
-  /*filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='silver'); */
-  /*background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(silver)); */
-  /*background: -moz-linear-gradient(top, #f3f3f3, silver); */
-  box-shadow: 0px 0px 4px rrgb(255,255,255);
-  -webkit-box-shadow: rgb(255,255,255) 0px 0px 4px;
-  -moz-box-shadow: rgb(255,255,255) 0px 0px 4px;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  color: #f3f3f3;
-}
-
-.projectStatusUninitialized
-{
-  float: left;
-  margin-left: 7px;
-  background: #fdfa85;
-  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcea5d', endColorstr='#fdfa85'); /* for IE */
-  background: -webkit-gradient(linear, left top, left bottom, from(#fcea5d), to(#fdfa85)); /* for webkit browsers */
-  background: -moz-linear-gradient(top, #fcea5d, #fdfa85); /* for firefox 3.6+ */
-  box-shadow: 0px 1px 7px rgb(254,253,0);
-  -webkit-box-shadow: rgb(254,253,0) 0px 1px 7px;
-  -moz-box-shadow: rgb(254,253,0) 0px 1px 7px;
-  transition: all 0.1s ease-in-out;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-}
-
-.projectStatusWaiting
-{
-  display: none;
-  background-image: url('/imgs/loading.gif');
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 24px;
-  height: 24px;
-  margin-left:3px;
-  margin-top:3px;
-  transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-}
-
 #projectListContainer
 {
   text-align: left;
@@ -1192,7 +1362,6 @@ article#project #statusContainer .status
 #projectViewContainer
 {
   float: left;
-  margin-top: 15px;
 }
 
 .rawText
