Dashboard now only shows sparklines for previously built projects. Only the first sparkline on the dashboard was showing up correctly. Fixed singular/plural forms of the sparkline on the dashboard. Metrics only showing up in the project page in case a previous build exists. The project build list only shows up in case at least one build was previously done. Fixed recently broken build button, in the project header.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -568,8 +568,8 @@ hr
 
 .sparkline
 {
-  float: right;
-  margin-right: 100px;
+  float: left;
+  margin-left: 60px;
   margin-top: 3px;
 }
 
@@ -618,6 +618,7 @@ hr
 .projectDetails
 {
   float: left;
+  width: 260px;
 }
 
 .projectTitle
@@ -975,7 +976,10 @@ hr
   padding: 0;
   float: left;
   clear: none;
-  z-index: 99999;
+  z-index: 1000;
+  height: 250px;
+  width: 160px;
+  overflow-y: auto;
 }
 
 #buildList table
