--- a/www/css/global.css
+++ b/www/css/global.css
@@ -561,9 +561,9 @@ hr
 /* @end */
 
 
-/* @group Project details */
+/* @group Project dashboard */
 /* +----------------------------------------------------------------+ *\
-|* | PROJECT DETAILS                                                | *|
+|* | PROJECT DASHBOARD                                              | *|
 \* +----------------------------------------------------------------+ */
 
 .sparkline
@@ -992,6 +992,27 @@ hr
 {
   /* don't allow any interruption on hover between text and triangle */
   float: left;
+  padding: 1px;
+}
+
+#buildListDropdownLink:hover
+{
+  position: relative;
+  top: -1px;
+  left: -1px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  border-radius: 4px 4px 4px 4px;
+  border-right: 1px solid #333;
+  border-left: 1px solid #444;
+  border-top: 1px solid #444;
+  border-bottom: 1px solid #333;
+  box-shadow: 1px 1px 2px #111;
+  -webkit-box-shadow: #111 1px 1px 2px;
+  -moz-box-shadow: #111 1px 1px 2px;
+  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.1s ease-in-out;
+  /*-moz-transition: all 0.1s ease-in-out;*/ /* Spoiled in Firefox 4*/
 }
 
 #buildList table th
@@ -1062,7 +1083,7 @@ hr
 #projectHeader .title
 {
   font-size: 1.1em;
-  margin-bottom: 3px;
+  margin-bottom: 1px;
   width: 670px;
   overflow: none;
   float: left;
