Practically rewritten voxmachina's installer from the ground up, abandoning his previous XML based approach - vastly because it was getting harder to have the old solution tag along, as more complicated stuff was being demanded from the installer. The javascript foundation for it was still somewhat reused, although practically unrecognizable now. It is still broken and not working. One or two minor layout tweaks.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -305,7 +305,8 @@ hr
 {
   font-size: .7em;
   text-indent: 2px;
-  color: rgb(120,120,120);
+  color: #b8b8b8;
+  padding-bottom: 4px;
 }
 
 #loginContainer
@@ -973,7 +974,7 @@ hr
 {
   font-size: 9pt;
   margin: 42px 0 0 170px;
-  padding: 0;
+  padding: 0 0 3px 0;
   float: left;
   clear: none;
   z-index: 1000;
