--- a/www/css/installer.css
+++ b/www/css/installer.css
@@ -94,9 +94,9 @@
   filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dddddd'); /* for IE */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.16, #fff), color-stop(0.6, #ddd), color-stop(0.9, #bbb)); /* for webkit browsers */
   background: -moz-linear-gradient(top, #fff 16%, #ddd 60%, #bbb 90%); /* for firefox 3.6+ */
-  transition: all 0.1s ease-in-out;
+  /*transition: all 0.1s ease-in-out;
   -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;*/
   cursor: pointer;
   float: left;
 }
@@ -107,9 +107,15 @@
   margin-top: 26px;
 }
 
-#installer button .buttonText
+#installer button.buttonText
 {
-  padding-top: 2px;
+  padding-top: 3px;
+}
+
+#installer .buttonTextInactive
+{
+  opacity: .2;
+  cursor: default;
 }
 
 #installer .mandatory
