--- a/www/css/installer.css
+++ b/www/css/installer.css
@@ -153,3 +153,28 @@
 {
   display: none;
 }
+
+#done
+{
+  text-align: center;
+}
+
+#pleaseWait
+{
+  font-size: 20pt;
+}
+
+#done img
+{
+  margin-top: 8px;
+}
+
+#done #result
+{
+  font-size: 38pt;
+}
+
+#done #resultMessage
+{
+  margin-top: 12px;
+}
