Added jGrowl for Growl-style notifications. Currently implemented to alert to finished builds and saved builder elements." Improved text on delete action for builder elements.Save action for builder elements now hides after saving and only appears on change or on key press. Still room for improvement, but better than it was before.Hidden the notification emails textarea on the settings section.Changed waiting icon color at the end of the installation process.

--- a/www/css/global.css
+++ b/www/css/global.css
@@ -1214,6 +1214,12 @@ hr
   width: 100%;
 }
 
+.builderElement .builderElementTitle a.submit
+{
+  display: none;
+  margin-right: 14px;
+}
+
 .builderElement .builderElementTitle p.title
 {
   float: left;
